<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manga</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Strings related to Home  -->
    <string name="title_activity_home">Home</string>
    <string name="test_tv">A</string>
    <string name="home_tab_tv">Home</string>
    <string name="mark_tab_tv">Mark</string>
    <string name="search_tab_tv">Search</string>
    <string name="me_tab_tv">Me</string>
    <string name="hello_blank_fragment">Hello</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="textview_news">News</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to MangaInfoActivity -->
    <string name="title_activity_mangaInfo">MangaInfo</string>

    <!-- Strings related to SettingsActivity -->
    <string name="title_activity_setting">Setting</string>

    <!-- Strings related to MangaReader -->
    <string name="title_activity_mangaReader">MangaReader</string>


    <!-- Strings related to NewsActivity -->
    <string name="title_activity_news">News</string>

    <string name="search_toolbar_view">Search</string>
    <string name="refresh_toolbar_view">Refresh</string>
    <string name="searchview_hint">search news title</string>

    <!-- Strings related to NewsInfoWebActivity -->
    <string name="title_activity_newinfoweb">NewsInfo</string>

    <!-- Strings related to Settings -->
    <string name="setting_category_default">Default</string>
    <string name="setting_preference_cleanCache">Clean Cache</string>
</resources>
