<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp" 
    android:background="#3399FF"
    android:elevation="3dp"
    >
    <View android:id="@+id/v_bottom"
	    android:layout_width="80dp"
	    android:layout_height="7dp"
	    android:layout_alignParentBottom="true"
	    android:background="#FFFFFF" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_tab">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#DDDDDD"
            android:id="@+id/tv_hometab"
            android:text="@string/home_tab_tv"
            android:textSize="20sp"
            android:gravity="center"
             />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#DDDDDD"
            android:id="@+id/tv_marktab"
            android:text="@string/mark_tab_tv"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#DDDDDD"
            android:id="@+id/tv_searchtab"
            android:text="@string/search_tab_tv"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#DDDDDD"
            android:id="@+id/tv_metab"
            android:text="@string/me_tab_tv"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

	

</RelativeLayout>
