<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nekomimi.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rg_website">
                <RadioButton
                    android:layout_width="0dp"
                    android:id="@+id/rb_common"
                    android:text="common"
                    android:textSize="18sp"
                    android:textColor="@color/BLACK"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:theme="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:id="@+id/rb_ehentai"
                    android:text="e-hentai"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:id="@+id/rb_exhentai"
                    android:text="exhentai"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"/>
            </RadioGroup>
            <AutoCompleteTextView android:id="@+id/account" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_account"
                 android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

